# codexapi

./: .gitignore  LEADBOOK.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: agent-v1.md
examples/: agent_basic.py  example_task_progress.sh  foreach_list.txt  foreach_task_readonly.yaml  task_file_readonly.yaml  task_progress.yaml  task_temp_hello.py
examples/lead/: README.md  clean.sh  prompt.txt  run_example.sh  start_worker.sh  worker.py
src/agentapi/: __init__.py  client.py
src/codexapi/: __init__.py  agent.py  agents.py  async_agent.py  cli.py  client.py  discord.py  foreach.py  gh_integration.py  lead.py  pushover.py  ralph.py  rate_limits.py  science.py  task.py  taskfile.py  watch.py  welfare.py
tests/: test_agent_backend.py  test_agents.py  test_async_agent.py  test_discord.py  test_rate_limits.py  test_science.py  test_task_progress.py
