[build-system]
requires = ["setuptools>=65,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexapi"
version = "0.5.5"
description = "Minimal Python API for running the Codex CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["codex", "agent", "cli", "openai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.64",
]

[project.scripts]
codexapi = "codexapi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
